# bit5

./: .gitignore  .gitmodules  README.md
tesgt293-denodb_fieldtype/: main.ts
test001-erase_console_lines/: Makefile  main.go
test002-pgbouncer_scram_auth/: README.md  Vagrantfile  provision.yml
test003-hdf5_enum/: Makefile  main.cc
test004-scram/: main.py
test005-nfsv4_minimal_open_port/: README.md  Vagrantfile  provision_client.yml  provision_server.yml  server-ipfw.rules
test006-softfloat/: Makefile  main.c
test007-scram_auth_proxy/: README.md  main.py  scram.py
test008-monit/: README.md  Vagrantfile  monitrc  provision.yml
test009-freebsd_sysctl/: Vagrantfile  collect.sh  tabularize.sh
test010-freebsd_mackerel/: README.md  Vagrantfile  check-packages.sh  check-system.sh  mackerel-agent.conf.j2  metrics-io.sh  metrics-zfs.sh  provision.yml
test011-tgamma/: Makefile  main.cc
test012-astyle/: Makefile  main.cc
test013-astyle_rawstring/: Makefile  README.md  main.cc
test014-mondrian/: App.cpp  GridView.cpp  GridView.h  MainWindow.cpp  MainWindow.h  Makefile  Matrix.h
test015-wxtimer/: App.cpp  App.h  Counter.cpp  Counter.h  Makefile  README.md  View.cpp  View.h
test016-sandpile_model/: Makefile  README.md  buffer.hpp  main.cc  matrix.hpp
test017-cpp_uninitialized_buffer/: Makefile  main.cc
test018-wx_sandpile/: Makefile  app.cpp  app.h  sandpile.cpp  sandpile.h  view.cpp  view.h  view_event.cpp  view_event.h
test020-terraform_ansible/: .env.example  .gitignore  README.md
test021-canvas/: index.html  index.js
test022-threejs_instancing/: Makefile  index.css  index.html  index.js  server.py
test023-animate/: index.css  index.html  index.js
test024-spinner/: main.cc
test025-cubes/: Makefile  controller.js  index.css  index.html  index.js  model.js  view.js
test026-freebsd_jail_postgresql/: Vagrantfile  provision.sh
test027-threejs_sandpile/: Makefile  avalanche.js  index.css  index.html  index.js  view.js
test028-threejs_sandpile_snowpack/: README.md  index.html  package.json
test029-menu/: index.css  index.html
test030-dynamical/: Makefile  README.md  main.c
test031-spline_interpolation/: main.py
test032-spline_interpolation/: main.cc
test033-spline_curve/: Makefile  main.cc  spline.hpp  vec.hpp
test107-scapy/: README.md  main.py  pyproject.toml
test346-cmake/example/: CMakeLists.txt  main.cpp
test348-cmake_module/: CMakeLists.txt  main.cpp
test402-fastapi/: README.md  main.py  pyproject.toml
(+945 files in other folders)
