[tool.poetry]
name = "test107-scapy"
version = "0.1.0"
description = ""
authors = ["snsinfu <snsinfu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scapy = {extras = ["basic"], version = "^2.4.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
